@@ -7,15 +7,15 @@
 						Host:&nbsp;
 					</td>
 					<td width="1">
-						<select name="cbo_host_id" onChange="window.location=document.form_pollercache.cbo_host_id.options[document.form_pollercache.cbo_host_id.selectedIndex].value">
-							<option value="utilities.php?action=view_poller_cache&host_id=-1&poller_action=<?php print $_REQUEST['poller_action'];?>"<?php if ($_REQUEST["host_id"] == "-1") {?> selected<?php }?>>Any</option>
-							<option value="utilities.php?action=view_poller_cache&host_id=0&poller_action=<?php print $_REQUEST['poller_action'];?>"<?php if ($_REQUEST["host_id"] == "0") {?> selected<?php }?>>None</option>
+						<select name="host_id" onChange="applyPItemFilterChange(document.form_pollercace)">
+							<option value="-1"<?php if ($_REQUEST["host_id"] == "-1") {?> selected<?php }?>>Any</option>
+							<option value="0"<?php if ($_REQUEST["host_id"] == "0") {?> selected<?php }?>>None</option>
 							<?php
 							$hosts = db_fetch_assoc("select id,description,hostname from host order by description");
 
 							if (sizeof($hosts) > 0) {
 							foreach ($hosts as $host) {
-								print "<option value='utilities.php?action=view_poller_cache&host_id=" . $host["id"] . "&poller_action=" . $_REQUEST["poller_action"] . "&page=1'"; if ($_REQUEST["host_id"] == $host["id"]) { print " selected"; } print ">" . $host["description"] . "</option>\n";
+								print "<option value='" . $host["id"] . "'"; if ($_REQUEST["host_id"] == $host["id"]) { print " selected"; } print ">" . $host["description"] . "</option>\n";
 							}
 							}
 							?>
@@ -26,11 +26,11 @@
 						Action:&nbsp;
 					</td>
 					<td width="1">
-						<select name="cbo_poller_action" onChange="window.location=document.form_pollercache.cbo_poller_action.options[document.form_pollercache.cbo_poller_action.selectedIndex].value">
-							<option value="utilities.php?action=view_poller_cache&poller_action=-1&host_id=<?php print $_REQUEST['host_id'];?>"<?php if ($_REQUEST['poller_action'] == '-1') {?> selected<?php }?>>Any</option>
-							<option value="utilities.php?action=view_poller_cache&poller_action=0&host_id=<?php print $_REQUEST['host_id'];?>"<?php if ($_REQUEST['poller_action'] == '0') {?> selected<?php }?>>SNMP</option>
-							<option value="utilities.php?action=view_poller_cache&poller_action=1&host_id=<?php print $_REQUEST['host_id'];?>"<?php if ($_REQUEST['poller_action'] == '1') {?> selected<?php }?>>Script</option>
-							<option value="utilities.php?action=view_poller_cache&poller_action=2&host_id=<?php print $_REQUEST['host_id'];?>"<?php if ($_REQUEST['poller_action'] == '2') {?> selected<?php }?>>Script Server</option>
+						<select name="poller_action" onChange="applyPItemFilterChange(document.form_pollercache)">
+							<option value="-1"<?php if ($_REQUEST['poller_action'] == '-1') {?> selected<?php }?>>Any</option>
+							<option value="0"<?php if ($_REQUEST['poller_action'] == '0') {?> selected<?php }?>>SNMP</option>
+							<option value="1"<?php if ($_REQUEST['poller_action'] == '1') {?> selected<?php }?>>Script</option>
+							<option value="2"<?php if ($_REQUEST['poller_action'] == '2') {?> selected<?php }?>>Script Server</option>
 						</select>
 					</td>
 					<td width="5"></td>
@@ -48,5 +48,6 @@
 			</table>
 		</td>
 		<input type='hidden' name='page' value='1'>
+		<input type='hidden' name='action' value='view_poller_cache'>
 		</form>
 	</tr>
