@@ -30,6 +30,8 @@ Cacti CHANGELOG
 -bug#0000958: Slope Mode is Not Selectable  
 -bug#0000959: Add Alarming When Poller Output Table is Not Empty 
 -bug#0000963: TCP/UDP capitalization 
+-bug#0000965: When setting filters under utilities, pressing enter takes you Back to the main screen
+-bug#0000966: Log file viewing utility has no ability to filter
 -bug: ss_sql.php was never tested and causes the script server to crash.
 -bug: In an effort to make the current version of Cacti supportable, add Timeshifter.  Thanks Gandolf!
 -bug: Allow query_ and host_ substitution in COMMENT and CDEF's.
